[gd_scene load_steps=4 format=3 uid="uid://0c4yb3ogsf0g"]

[ext_resource type="Script" uid="uid://dqoo82sl5gn34" path="res://Scenes/UserInterface/Menus/StartMenu/ContinueLastGameWindow/continue_last_game_window.gd" id="1_vgwll"]
[ext_resource type="Texture2D" uid="uid://ddjk7lhulb7hy" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/SECTION_ORIGINS/Background.png" id="2_3adxc"]
[ext_resource type="Texture2D" uid="uid://cm1sc4syaj0xr" path="res://Scenes/UserInterface/Menus/StartMenu/Assets/SECTION_ORIGINS/OptionsButtonNormal.png" id="3_k8mkh"]

[node name="ContinueLastGameWindow" type="Control"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -29.0
offset_right = 57.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vgwll")

[node name="BackgroundContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.5
offset_top = -89.0
offset_right = 322.5
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3adxc")
expand_mode = 1

[node name="InfoLabel" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -68.0
offset_right = 181.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "LABEL_CONTINUE_LAST_GAME"
horizontal_alignment = 1

[node name="ContinueButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 24.5
offset_top = 119.0
offset_right = 271.5
offset_bottom = 159.0
texture_normal = ExtResource("3_k8mkh")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/ContinueButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "BUTTON_CONTINUE"

[node name="SelectGameButton" type="TextureButton" parent="TextureRect"]
layout_mode = 0
offset_left = 379.5
offset_top = 118.0
offset_right = 626.5
offset_bottom = 158.0
texture_normal = ExtResource("3_k8mkh")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/SelectGameButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "BUTTON_CHANGE_GAME"

[connection signal="pressed" from="TextureRect/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="TextureRect/SelectGameButton" to="." method="_on_select_game_button_pressed"]
